--- a/public/02-blogs.html
+++ b/public/02-blogs.html
@@ -259,9 +259,9 @@
 				</div>
 			</div>
 			<!-- start sBlog-->
-			<section class="sBlog section" id="sBlog">
+			<div class="sBlog section" id="sBlog">
 				<div class="container">
-					<div class="row">
+					<div class="sBlog__head-row row">
 						<div class="col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
 								<!-- picture-->
@@ -329,6 +329,8 @@
 								</a>
 							</div>
 						</div>
+					</div>
+					<div class="row">
 						<div class="col-md-6">
 							<a class="blog-item" href="#">
 								<!-- picture-->
@@ -940,14 +942,14 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sBlog-->
 			<!-- start sContact-->
 			<section class="sContact section" id="sContact">
 				<div class="container">
 					<div class="section-title text-center">
 						<h4>Контакты</h4>
-						<h2>Позвоните или посетите наш офис&nbsp;на&nbsp;производстве</h2>
+						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
 						<div class="col-lg-7 col-xxl-8">
