--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -764,7 +764,7 @@
 				<div class="container">
 					<div class="section-title text-center">
 						<h4>Контакты</h4>
-						<h2>Позвоните или посетите наш офис&nbsp;на&nbsp;производстве</h2>
+						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
 						<div class="col-lg-7 col-xxl-8">
