--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -290,8 +290,8 @@
 							<source type="image/webp" srcset="img/@2x/webp/blog-8.webp"/><img src="img/@2x/blog-8.jpg" alt="" loading="lazy"/>
 						</picture>
 						<!-- /picture-->
-						<p>Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из бревен, кирпичей, металла, дерева и других материалов, и все эти идеи можно воплотить с помощью навеса. В этой статье мы расскажем о 7 способах, как украсить участок, и сделать жизнь комфортнее под навесом.</p>
 					</div>
+					<p>Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из бревен, кирпичей, металла, дерева и других материалов, и все эти идеи можно воплотить с помощью навеса. В этой статье мы расскажем о 7 способах, как украсить участок, и сделать жизнь комфортнее под навесом.</p>
 					<div class="content-table">
 						<div class="content-table__title">Содержание
 						</div>
@@ -305,22 +305,71 @@
 							<li><a href="#">Навес для кладовой</a></li>
 						</ul>
 					</div>
-					<div class="blog-page-item">
-						<h2>Входная группа</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Навес над входной группой необходим для защиты крыльца или веранды от дождя, снега и наледи. Чтобы не образовался гололед, на котором легко поскользнуться, а также чтобы входную дверь можно было без проблем открыть, не опасаясь, что это окажется невозможным из-за завалов снега. Также навес над входной группой помогает содержать проход ко входу в дом в чистоте и сухости. Навес из поликарбоната идеально подойдет для такой роли. 
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-							<div class="col-lg-3 col-sm-6">
+					<div class="row">
+						<div class="col-lg-9">
+							<h2>Входная группа</h2>
+							<p>Навес над входной группой необходим для защиты крыльца или веранды от дождя, снега и наледи. Чтобы не образовался гололед, на котором легко поскользнуться, а также чтобы входную дверь можно было без проблем открыть, не опасаясь, что это окажется невозможным из-за завалов снега. Также навес над входной группой помогает содержать проход ко входу в дом в чистоте и сухости. Навес из поликарбоната идеально подойдет для такой роли.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+							<h2>Закрытая веранда</h2>
+							<p>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+							<h2>Открытая веранда</h2>
+							<p>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+							<h2>Навес для автомобиля</h2>
+							<p>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+							<h2>Беседка</h2>
+							<p>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+							<h2>Игровая зона для детей (h2)</h2>
+							<p>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<h3>Игровая зона для детей (h3)</h3>
+							<h4>Игровая зона для детей (h4)</h4>
+							<h5>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха. (h5)</h5>
+							<p class="mini-text">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+							<h2>Навес для кладовой</h2>
+							<p>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.</p>
+							<!-- picture-->
+							<picture> 
+								<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+						</div>
+						<div class="col-lg-3">
+							<div class="sBlogPage__banners-wrap">
 								<a class="blog-item" href="#">
 									<!-- picture-->
 									<picture> 
@@ -352,59 +401,6 @@
 										</div>
 									</div>
 								</a>
-							</div>
-						</div>
-					</div>
-					<div class="blog-page-item">
-						<h2>Закрытая веранда</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-					</div>
-					<div class="blog-page-item">
-						<h2>Открытая веранда</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-					</div>
-					<div class="blog-page-item">
-						<h2>Навес для автомобиля</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-							<div class="col-lg-3 col-sm-6">
 								<div class="adv-item bg-wrap">
 									<!-- picture-->
 									<picture class="picture-bg"> 
@@ -419,62 +415,6 @@
 									<a class="adv-item__btn" href="#">Подробнее
 									</a>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="blog-page-item">
-						<h2>Беседка</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-					</div>
-					<div class="blog-page-item">
-						<h2>Игровая зона для детей (h2)</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<h3>Игровая зона для детей (h3)</h3>
-								<h4>Игровая зона для детей (h4)</h4>
-								<h5>Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха. (h5)</h5>
-								<div class="blog-page-item__mini-text">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-					</div>
-					<div class="blog-page-item">
-						<h2>Навес для кладовой</h2>
-						<div class="row">
-							<div class="col-lg-9">
-								<div class="blog-page-item__caption">Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
-								</div>
-							</div>
-							<div class="col-lg-9">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/blog-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/blog-4.webp"/><img src="img/@2x/blog-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
 							</div>
 						</div>
 					</div>
