--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -940,7 +940,20 @@
 							</a>
 						</div>
 						<div class="col-12">
-							<p>Типовые арочные навесыиз поликарбонатаот 72 000 ₽</p>
+							<div class="banner-item banner-item--offer-center bg-wrap mb-0">
+								<!-- picture-->
+								<picture class="picture-bg"> 
+									<source type="image/avif" srcset="img/@2x/avif/banner-item-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/banner-item-2.webp"/><img src="img/@2x/banner-item-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="banner-item__title">Каталог
+								</div>
+								<div class="banner-item__caption">Типовые арочные навесы<br>из поликарбоната<br><span>от 72 000 ₽</span>
+								</div>
+								<a class="banner-item__btn" href="#">Смотреть варианты
+								</a>
+							</div>
 						</div>
 						<div class="col-md-6 col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
