--- a/public/02-blogs.html
+++ b/public/02-blogs.html
@@ -397,10 +397,10 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-4 col-xl-3">
+						<div class="col-md-6 col-lg-4 col-xl-3">
 							<p>Большой выбор навесов к дому</p>
 						</div>
-						<div class="col-md-8 col-xl-9">
+						<div class="col-md-6 col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
 								<!-- picture-->
 								<picture> 
@@ -634,10 +634,38 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-4 col-xl-3">
-							<p>Смотрите и пишите</p>
+						<div class="col-md-6 col-lg-4 col-xl-3">
+							<div class="adv-item adv-item--white">
+								<div class="adv-item__title">Наши соц. сети
+								</div>
+								<div class="adv-item__caption">Смотрите <br> и&nbsp;пишите
+								</div>
+								<div class="social">
+									<a class="social__item" href="#" target="_blank">
+										<div class="social__icon-wrap">
+											<svg class="icon icon-instagram ">
+												<use xlink:href="img/svg/sprite.svg#instagram"></use>
+											</svg>
+										</div><span>instagram</span>
+									</a>
+									<a class="social__item" href="#" target="_blank">
+										<div class="social__icon-wrap">
+											<svg class="icon icon-youtube ">
+												<use xlink:href="img/svg/sprite.svg#youtube"></use>
+											</svg>
+										</div><span>youtube</span>
+									</a>
+									<a class="social__item" href="#" target="_blank">
+										<div class="social__icon-wrap">
+											<svg class="icon icon-whatsapp ">
+												<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+											</svg>
+										</div><span>whatsapp</span>
+									</a>
+								</div>
+							</div>
 						</div>
-						<div class="col-md-8 col-xl-9">
+						<div class="col-md-6 col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
 								<!-- picture-->
 								<picture> 
@@ -917,10 +945,17 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md-4 col-xl-3">
-							<p>Бесплатно: замер, расчет сметы и 3D-макет</p>
+						<div class="col-md-6 col-lg-4 col-xl-3">
+							<div class="adv-item adv-item--white">
+								<div class="adv-item__title">Каталог
+								</div>
+								<div class="adv-item__caption">Бесплатно: замер, расчет сметы <br> и&nbsp;3D-макет
+								</div>
+								<a class="adv-item__btn" href="#">Получить даром
+								</a>
+							</div>
 						</div>
-						<div class="col-md-8 col-xl-9">
+						<div class="col-md-6 col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
 								<!-- picture-->
 								<picture> 
