02-blog-page fix

--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -306,7 +306,7 @@
 						</ul>
 					</div>
 					<div class="row">
-						<div class="col-lg-9">
+						<div class="col-xl-9">
 							<h2>Входная группа</h2>
 							<p>Навес над входной группой необходим для защиты крыльца или веранды от дождя, снега и наледи. Чтобы не образовался гололед, на котором легко поскользнуться, а также чтобы входную дверь можно было без проблем открыть, не опасаясь, что это окажется невозможным из-за завалов снега. Также навес над входной группой помогает содержать проход ко входу в дом в чистоте и сухости. Навес из поликарбоната идеально подойдет для такой роли.</p>
 							<!-- picture-->
@@ -368,7 +368,7 @@
 							</picture>
 							<!-- /picture-->
 						</div>
-						<div class="col-lg-3">
+						<div class="col-xl-3">
 							<div class="sBlogPage__banners-wrap">
 								<a class="blog-item" href="#">
 									<!-- picture-->
