--- a/public/02-blogs.html
+++ b/public/02-blogs.html
@@ -398,7 +398,20 @@
 							</a>
 						</div>
 						<div class="col-md-6 col-lg-4 col-xl-3">
-							<p>Большой выбор навесов к дому</p>
+							<div class="adv-item bg-wrap">
+								<!-- picture-->
+								<picture class="picture-bg"> 
+									<source type="image/avif" srcset="img/@2x/avif/adv-item-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/adv-item-2.webp"/><img class="object-fit-js" src="img/@2x/adv-item-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="adv-item__title">Каталог
+								</div>
+								<div class="adv-item__caption">Большой выбор навесов к&nbsp;дому
+								</div>
+								<a class="adv-item__btn" href="#">Смотреть
+								</a>
+							</div>
 						</div>
 						<div class="col-md-6 col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
@@ -500,7 +513,20 @@
 							</a>
 						</div>
 						<div class="col-12">
-							<p>Получите цену навеса и посмотрите, как он будет выглядеть</p>
+							<div class="banner-item banner-item--offer bg-wrap mb-0">
+								<!-- picture-->
+								<picture class="picture-bg"> 
+									<source type="image/avif" srcset="img/@2x/avif/banner-item-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/banner-item-3.webp"/><img src="img/@2x/banner-item-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="banner-item__title">Калькулятор
+								</div>
+								<div class="banner-item__caption">Получите цену<br>навеса и посмотрите,<br>как он будет выглядеть
+								</div>
+								<a class="banner-item__btn" href="#">Создать свой навес
+								</a>
+							</div>
 						</div>
 						<div class="col-md-6 col-lg-8 col-xl-9">
 							<a class="blog-item" href="#">
