--- a/public/04-reviews.html
+++ b/public/04-reviews.html
@@ -219,7 +219,7 @@
 							<div class="sClientsReviews__wrap">
 								<div class="sClientsReviews__profile">
 									<div class="sClientsReviews__profile-content">
-										<div class="sClientsReviews__avatar">
+										<div class="sClientsReviews__avatar bg-wrap">
 										</div>
 										<div class="sClientsReviews__info"><span>Клиент</span><span>Игорь</span>
 											<p>МО, г. Дмитров, СНТ &laquo;Квазаровка&raquo;</p>
@@ -378,7 +378,7 @@
 						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
-						<div class="col-lg-7 col-xxl-8">
+						<div class="sContact__col-map col-lg-7 col-xxl-8">
 							<div class="sContact__map">
 								<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 								<script>
@@ -413,7 +413,7 @@
 								</script>
 							</div>
 						</div>
-						<div class="col-lg-5 col-xxl-4">
+						<div class="sContact__col-info col-lg-5 col-xxl-4">
 							<div class="sContact__info">
 								<div class="locaton-dropdown dropdown">
 									<div class="locaton-dropdown__btn dropdown__btn">
