--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -211,8 +211,8 @@
 				</div>
 			</div>
 			<!-- start sSpecifications-->
-			<section class="sSpecifications section" id="sSpecifications">
-				<div class="container">
+			<div class="sSpecifications section" id="sSpecifications">
+				<div class="sSpecifications__container container">
 					<div class="row">
 						<div class="col-lg-8">
 							<div class="sSpecifications__slider-wrap">
@@ -310,8 +310,8 @@
 							<table>
 								<thead>
 									<tr>
-										<th>
-											<h6>Характеристики</h6>
+										<th colspan="2">
+											<p>Характеристики</p>
 										</th>
 									</tr>
 								</thead>
@@ -353,8 +353,8 @@
 							<table>
 								<thead>
 									<tr>
-										<th>
-											<h6>Цены и сроки</h6>
+										<th colspan="2">
+											<p>Цены и сроки</p>
 										</th>
 									</tr>
 								</thead>
@@ -377,7 +377,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sSpecifications-->
 			<!-- start sSimilarAwnings-->
 			<section class="sSimilarAwnings section" id="sSimilarAwnings">
@@ -506,7 +506,7 @@
 						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
-						<div class="col-lg-7 col-xxl-8">
+						<div class="sContact__col-map col-lg-7 col-xxl-8">
 							<div class="sContact__map">
 								<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 								<script>
@@ -541,7 +541,7 @@
 								</script>
 							</div>
 						</div>
-						<div class="col-lg-5 col-xxl-4">
+						<div class="sContact__col-info col-lg-5 col-xxl-4">
 							<div class="sContact__info">
 								<div class="locaton-dropdown dropdown">
 									<div class="locaton-dropdown__btn dropdown__btn">
