--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -216,7 +216,7 @@
 						<!-- start sFilter-->
 						<div class="sFilter">
 							<div class="dd-group-js">
-								<div class="dd-head-js d-flex d-lg-none">Сортировать
+								<div class="dd-head-js d-flex d-lg-none justify-content-between">Показать фильтры
 									<svg class="icon icon-chevron-down ">
 										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 									</svg>
@@ -767,7 +767,7 @@
 						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
-						<div class="col-lg-7 col-xxl-8">
+						<div class="sContact__col-map col-lg-7 col-xxl-8">
 							<div class="sContact__map">
 								<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 								<script>
@@ -802,7 +802,7 @@
 								</script>
 							</div>
 						</div>
-						<div class="col-lg-5 col-xxl-4">
+						<div class="sContact__col-info col-lg-5 col-xxl-4">
 							<div class="sContact__info">
 								<div class="locaton-dropdown dropdown">
 									<div class="locaton-dropdown__btn dropdown__btn">
