--- a/public/index.html
+++ b/public/index.html
@@ -415,8 +415,8 @@
 						<div class="row">
 							<div class="col-12">
 								<!-- start sSpecifications-->
-								<section class="sSpecifications section" id="sSpecifications">
-									<div class="container">
+								<div class="sSpecifications section" id="sSpecifications">
+									<div class="sSpecifications__container container">
 										<div class="row">
 											<div class="col-lg-8">
 												<div class="sSpecifications__slider-wrap">
@@ -514,8 +514,8 @@
 												<table>
 													<thead>
 														<tr>
-															<th>
-																<h6>Характеристики</h6>
+															<th colspan="2">
+																<p>Характеристики</p>
 															</th>
 														</tr>
 													</thead>
@@ -557,8 +557,8 @@
 												<table>
 													<thead>
 														<tr>
-															<th>
-																<h6>Цены и сроки</h6>
+															<th colspan="2">
+																<p>Цены и сроки</p>
 															</th>
 														</tr>
 													</thead>
@@ -580,13 +580,13 @@
 											</div>
 										</div>
 									</div>
-								</section>
+								</div>
 								<!-- end sSpecifications-->
 							</div>
 							<div class="col-12">
 								<!-- start sSpecifications-->
-								<section class="sSpecifications section" id="sSpecifications">
-									<div class="container">
+								<div class="sSpecifications section" id="sSpecifications">
+									<div class="sSpecifications__container container">
 										<div class="row">
 											<div class="col-lg-8">
 												<div class="sSpecifications__slider-wrap">
@@ -684,8 +684,8 @@
 												<table>
 													<thead>
 														<tr>
-															<th>
-																<h6>Характеристики</h6>
+															<th colspan="2">
+																<p>Характеристики</p>
 															</th>
 														</tr>
 													</thead>
@@ -727,8 +727,8 @@
 												<table>
 													<thead>
 														<tr>
-															<th>
-																<h6>Цены и сроки</h6>
+															<th colspan="2">
+																<p>Цены и сроки</p>
 															</th>
 														</tr>
 													</thead>
@@ -750,13 +750,13 @@
 											</div>
 										</div>
 									</div>
-								</section>
+								</div>
 								<!-- end sSpecifications-->
 							</div>
 							<div class="col-12">
 								<!-- start sSpecifications-->
-								<section class="sSpecifications section" id="sSpecifications">
-									<div class="container">
+								<div class="sSpecifications section" id="sSpecifications">
+									<div class="sSpecifications__container container">
 										<div class="row">
 											<div class="col-lg-8">
 												<div class="sSpecifications__slider-wrap">
@@ -854,8 +854,8 @@
 												<table>
 													<thead>
 														<tr>
-															<th>
-																<h6>Характеристики</h6>
+															<th colspan="2">
+																<p>Характеристики</p>
 															</th>
 														</tr>
 													</thead>
@@ -897,8 +897,8 @@
 												<table>
 													<thead>
 														<tr>
-															<th>
-																<h6>Цены и сроки</h6>
+															<th colspan="2">
+																<p>Цены и сроки</p>
 															</th>
 														</tr>
 													</thead>
@@ -920,7 +920,7 @@
 											</div>
 										</div>
 									</div>
-								</section>
+								</div>
 								<!-- end sSpecifications-->
 							</div>
 							<div class="col">
@@ -2734,7 +2734,7 @@
 						<h2>Позвоните или посетите наш офис на&nbsp;производстве</h2>
 					</div>
 					<div class="sContact__row row">
-						<div class="col-lg-7 col-xxl-8">
+						<div class="sContact__col-map col-lg-7 col-xxl-8">
 							<div class="sContact__map">
 								<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 								<script>
@@ -2769,7 +2769,7 @@
 								</script>
 							</div>
 						</div>
-						<div class="col-lg-5 col-xxl-4">
+						<div class="sContact__col-info col-lg-5 col-xxl-4">
 							<div class="sContact__info">
 								<div class="locaton-dropdown dropdown">
 									<div class="locaton-dropdown__btn dropdown__btn">
