--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
 			<!-- end header-->
 			<!-- start headerBlock-->
 			<div class="headerBlock section bg-wrap" id="headerBlock">
-				<video loading="lazy" preload="auto" no-controls="no-controls" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/@2x/webp/video.webp">
+				<video preload="auto" no-controls="no-controls" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/@2x/webp/video.webp">
 					<source src="video/video-1.mp4" type="video/mp4"/>
 				</video>
 				<div class="container">
@@ -295,7 +295,7 @@
 			</div>
 			<!-- end headerBlock-->
 			<!-- start sCatalog-->
-			<section class="sCatalog section" id="sCatalog">
+			<section class="sCatalog section">
 				<div class="container">
 					<div class="section-title text-center">
 						<h4>Каталог</h4>
@@ -1233,31 +1233,31 @@
 										<div class="swiper-wrapper">
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="variants" id="variant1" autocomplete="off"/>
+														<input class="btn-check" type="radio" name="variants" id="variant1"/>
 														<label for="variant1"><img src="img/svg/sCalculator-1.svg" alt=""/><span>1-скатная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="variants" id="variant2" autocomplete="off"/>
+														<input class="btn-check" type="radio" name="variants" id="variant2"/>
 														<label for="variant2"><img src="img/svg/sCalculator-2.svg" alt=""/><span>2-скатная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="variants" id="variant3" autocomplete="off"/>
+														<input class="btn-check" type="radio" name="variants" id="variant3"/>
 														<label for="variant3"><img src="img/svg/sCalculator-3.svg" alt=""/><span>Арочная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="variants" id="variant4" autocomplete="off"/>
+														<input class="btn-check" type="radio" name="variants" id="variant4"/>
 														<label for="variant4"><img src="img/svg/sCalculator-4.svg" alt=""/><span>Полуарочная кровля</span></label>
 													</div>
 												</div>
 												<div class="form-wrap__slide swiper-slide">
 													<div class="form-wrap__item">
-														<input class="btn-check" type="radio" name="variants" id="variant5" autocomplete="off"/>
+														<input class="btn-check" type="radio" name="variants" id="variant5"/>
 														<label for="variant5"><img src="img/svg/sCalculator-5.svg" alt=""/><span>4-скатная кровля</span></label>
 													</div>
 												</div>
@@ -1376,37 +1376,37 @@
 							<div class="col">
 								<div class="row">
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option1" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option1"/>
 												<label class="btn" for="option1"><span>4м</span><span>4 метра</span>
 												</label>
 											</div>
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option2" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option2"/>
 												<label class="btn" for="option2"><span>5м</span><span>5 метров</span>
 												</label>
 											</div>
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option3" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option3"/>
 												<label class="btn" for="option3"><span>6м</span><span>6 метров</span>
 												</label>
 											</div>
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option4" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option4"/>
 												<label class="btn" for="option4"><span>7м</span><span>7 метров</span>
 												</label>
 											</div>
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option5" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option5"/>
 												<label class="btn" for="option5"><span>8м</span><span>8 метров</span>
 												</label>
 											</div>
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option6" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option6"/>
 												<label class="btn" for="option6"><span>9м</span><span>9 метров</span>
 												</label>
 											</div>
 											<div class="sTypical__btn-col col">
-												<input class="btn-check" type="checkbox" id="option7" autocomplete="off"/>
+												<input class="btn-check" type="checkbox" id="option7"/>
 												<label class="btn" for="option7"><span>10м</span><span>10 метров</span>
 												</label>
 											</div>
@@ -2589,7 +2589,7 @@
 				</section>
 				<!-- end sCertificates-->
 				<!-- start sCatalog-->
-				<section class="sCatalog sCatalog--prod section" id="sCatalog">
+				<section class="sCatalog sCatalog--prod section">
 					<div class="container">
 						<div class="section-title text-center">
 							<h2>Производим также</h2>
