--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -211,7 +211,7 @@
 				</div>
 			</div>
 			<!-- start sSpecifications-->
-			<div class="sSpecifications section" id="sSpecifications">
+			<div class="sSpecifications section">
 				<div class="sSpecifications__container container">
 					<div class="row">
 						<div class="col-lg-8">
