--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
 			<!-- end header-->
 			<!-- start headerBlock-->
 			<div class="headerBlock section bg-wrap" id="headerBlock">
-				<video preload="auto" no-controls="no-controls" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/@2x/webp/video.webp">
+				<video preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/@2x/webp/video.webp">
 					<source src="video/video-1.mp4" type="video/mp4"/>
 				</video>
 				<div class="container">
@@ -415,7 +415,7 @@
 						<div class="row">
 							<div class="col-12">
 								<!-- start sSpecifications-->
-								<div class="sSpecifications section" id="sSpecifications">
+								<div class="sSpecifications section">
 									<div class="sSpecifications__container container">
 										<div class="row">
 											<div class="col-lg-8">
@@ -585,7 +585,7 @@
 							</div>
 							<div class="col-12">
 								<!-- start sSpecifications-->
-								<div class="sSpecifications section" id="sSpecifications">
+								<div class="sSpecifications section">
 									<div class="sSpecifications__container container">
 										<div class="row">
 											<div class="col-lg-8">
@@ -1800,7 +1800,7 @@
 								<div class="dd-group dd-group-js">
 									<div class="accordion-item">
 										<div class="accordion-item__head dd-head-js">
-											<h4>Ферма для гаражей  <span>(крыша&nbsp;и&nbsp;столбы)<span/></h4>
+											<h4>Ферма для гаражей <span>(крыша&nbsp;и&nbsp;столбы)</span></h4>
 											<svg class="icon icon-chevron-right ">
 												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 											</svg>
