--- a/public/02-blogs.html
+++ b/public/02-blogs.html
@@ -295,7 +295,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-lg-4 col-xl-3">
+						<div class="col-lg-4 col-xl-3 d-none d-lg-block">
 							<div class="categories">
 								<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
 									<svg class="icon icon-categories-1 ">
