--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -70,7 +70,7 @@
 								<div class="menu-mobile menu-mobile--js">
 									<div class="menu-mobile__inner">
 										<div class="top-nav__btn-wrap">
-											<a class="top-nav__btn" href="#">Вызвать замерщика
+											<a class="top-nav__btn link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика
 											</a>
 										</div>
 										<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
@@ -129,12 +129,12 @@
 											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc__item--phone-call" href="#" target="_blank">
+									<a class="soc__item soc__item--phone-call link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">
 										<svg class="icon icon-phone-call ">
 											<use xlink:href="img/svg/sprite.svg#phone-call"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc__item--measuring d-none d-xl-grid" href="#" target="_blank">
+									<a class="soc__item soc__item--measuring d-none d-xl-grid link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">
 										<svg class="icon icon-measuring ">
 											<use xlink:href="img/svg/sprite.svg#measuring"></use>
 										</svg>
@@ -1214,7 +1214,7 @@
 											<use xlink:href="img/svg/sprite.svg#youtube"></use>
 										</svg>
 									</a>
-									<a class="sContact__btn btn btn-primary btn-sm" href="#">Обратный звонок
+									<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Запросить обратный звонок" data-pic="2">Обратный звонок
 									</a>
 								</div>
 							</div>
@@ -1272,7 +1272,7 @@
 									<div class="label"> <span>Работаем с&nbsp;2012 года</span>
 									</div>
 								</div>
-								<a class="footer__btn btn btn-primary btn-sm" href="#">Вызвать замерщика 
+								<a class="footer__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Вызвать замерщика" data-text="Оставьте свой номер телефона, мы&amp;nbsp;вам перезвоним и&amp;nbsp;договоримся о&amp;nbsp;замере" data-btn="Отправить" data-pic="1">Вызвать замерщика 
 								</a>
 							</div>
 							<div class="col-6 col-md-4 col-lg-2 ml-lg-auto">
