--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -428,7 +428,7 @@
 							<!-- /picture-->
 							<div class="banner-item__title">Обратная связь
 							</div>
-							<div class="banner-item__caption">Задайте свой<br>вопрос в Вотсапе
+							<div class="banner-item__caption">Напишите свой<br>вопрос в Whatsapp
 							</div>
 							<a class="banner-item__btn" href="#">Написать
 							</a>
